  strict Gnits requirements

* fixed a bug: Woflan TPN files were not created because of missing
  invokation in `main()' method

* overworked test scripts: creation of output files is checked now

* removed PNML and oWFN parser - this belongs into the Petri Net API

* changed license to GNU Affero General Public License Version 3

Version 2.0.3 (29 June 2007)
============================

* miscellaneous:
     * adopted the GNU GPL Version 3

     * minor changes and bug fixes

Version 2.0.2 (15 June 2007)
============================

* new features:
     * BPEL4Chor choreographies can be translated (further information to
       come)

     * WSDL files can be parsed to support the translation of a BPEL process

     * abstract BPEL processes (both BPEL4WS 1.1 and WS-BPEL 2.0) are now
       parsed


* miscellaneous:
     * when parsing multiple BPEL processes, wildcard like `*.bpel' can be
       used

Version 2.0.1 (11 May 2007)
===========================

* fixed bugs:
     * `<if>'/`<switch>' pattern did not work with parameter
       `communicationonly'

     * `<flow>' activities in repeated constructs (`<while>',
       `<repeatUntil>', ...) could result in unbounded nets

     * parameter `xor' could crash


* miscellaneous:
     * new parameter `nointerface' allows to create dot output of the
       generated Petri net model without drawing the interface

     * transitions of the Petri net model are labeled and colored according
       to their role (only for dot mode)

     * Petri net reduction rules can be chosen using the `reduce' option

     * improved performance of composition of nets in the `consistency' mode

Version 2.0.0 (20 April 2007)
=============================

* input:
     * executable BPEL4WS 1.1 processes

     * executable WS-BPEL 2.0 processes

     * abstract BPEL4WS 1.1 processes (experimental)

     * abstract WS-BPEL 2.0 processes (experimental)

* output: