@@ -103,6 +103,8 @@ Version 2.04-unreleased
 
 * changed license to GNU Affero General Public License Version 3
 
+* corrected output of final condition (removed `ALL_EXTERNAL_PLACES EMPTY')
+
 
 See file ChangeLog <http://service-technology.org/files/bpel2owfn/ChangeLog> for
 complete version history.
